update antlr version to 4.13.1